coordinator 수정